--- a/mmbase/trunk/maven-base/pom.xml
+++ b/mmbase/trunk/maven-base/pom.xml
@@ -179,7 +179,10 @@ See http://www.MMBase.org/license
         <plugin>
           <artifactId>maven-war-plugin</artifactId>
           <!-- this is a version of the war plugin compiled by Michiel. See http://jira.codehaus.org/browse/MWAR-205 -->
+          <!--
           <version>2.1-beta-2-20090723.092931-2</version>
+          -->
+          <version>2.3</version>
           <configuration>
             <failOnMissingWebXml>false</failOnMissingWebXml>
             <archiveClasses>true</archiveClasses>
