--- a/pom.xml
+++ b/pom.xml
@@ -263,12 +263,12 @@ Version $Id: pom.xml,v 1.8 2009/02/20 15:21:28 michiel Exp $
               <link>http://www.mmbase.org/api/trunk/mmbase-utils/</link>
               <link>http://www.mmbase.org/api/trunk/mmbase-bridge/</link>
               <link>http://www.mmbase.org/api/trunk/mmbase-core/</link>
-             <link>http://download.oracle.com/javase/7/docs/api/</link>
-              <link>http://download-llnw.oracle.com/javaee/5/api/</link>
-              <link>http://download.oracle.com/docs/cd/E17802_01/products/products/jsp/jstl/1.1/docs/api/</link>
+              <link>http://docs.oracle.com/javase/7/docs/api/</link>
+              <link>http://docs.oracle.com/javaee/5/api/</link>
+              <link>http://docs.oracle.com/cd/E17802_01/products/products/jsp/jstl/1.1/docs/api/</link>
               <link>http://logging.apache.org/log4j/1.2/apidocs/</link>
               <link>http://commons.apache.org/fileupload/apidocs/</link>
-             <link>http://lucene.apache.org/java/3_4_0/api/all/</link>
+              <link>http://lucene.apache.org/java/3_4_0/api/all/</link>
               <link>http://www.mozilla.org/rhino/apidocs/</link>
             </links>
 
