--- a/applications/rmmci/test/pom.xml
+++ b/applications/rmmci/test/pom.xml
@@ -32,6 +32,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
+          <version>2.5</version>
           <configuration>
             <includes>
               <include>**/*Test.java</include>
