--- a/example-webapp/pom.xml
+++ b/example-webapp/pom.xml
@@ -32,7 +32,8 @@
     <plugins>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
-        <artifactId>tomcat-maven-plugin</artifactId>
+        <artifactId>tomcat8-maven-plugin</artifactId>
+        <version>2.2</version>
         <configuration>
           <warSourceDirectory>src/main/webapp</warSourceDirectory>
         </configuration>
