--- a/pom.xml
+++ b/pom.xml
@@ -378,6 +378,7 @@ Version $Id: pom.xml,v 1.8 2009/02/20 15:21:28 michiel Exp $
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.5</version>
         <configuration>
           <includes>
             <include>**/*Test.java</include>
@@ -492,6 +493,7 @@ Version $Id: pom.xml,v 1.8 2009/02/20 15:21:28 michiel Exp $
       -->
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.5</version>
       </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
@@ -576,11 +578,10 @@ Version $Id: pom.xml,v 1.8 2009/02/20 15:21:28 michiel Exp $
       <name>MMBase Maven2 snapshots repository</name>
       <url>http://www.mmbase.org/snapshots</url>
     </repository>
-
     <repository>
       <id>jboss</id>
       <name>JBoss maven 2 repository</name>
-      <url>http://repository.jboss.com/maven2</url>
+      <url>https://repository.jboss.org/maven2</url>
     </repository>
   </repositories>
   <pluginRepositories>
