--- a/example-webapp/pom.xml
+++ b/example-webapp/pom.xml
@@ -39,11 +39,13 @@
         </configuration>
       </plugin>
       <plugin>
-        <groupId>org.mortbay.jetty</groupId>
+        <groupId>org.eclipse.jetty</groupId>
         <artifactId>jetty-maven-plugin</artifactId>
-        <version>7.0.0.pre5</version>
+        <version>9.4.44.v20210927</version>
         <configuration>
-          <jettyEnvXml>${basedir}/jetty-env.xml</jettyEnvXml>
+          <webApp>
+            <jettyEnvXml>${basedir}/jetty-env.xml</jettyEnvXml>
+          </webApp>
           <systemProperties>
             <systemProperty>
               <name>jdbcUrl</name>
@@ -71,6 +73,11 @@
             <groupId>hsqldb</groupId>
             <artifactId>hsqldb</artifactId>
             <version>1.8.0.7</version>
+          </dependency>
+          <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+            <version>1.6.2</version>
           </dependency>
         </dependencies>
       </plugin>
